feat: Ajustes e validação de ms-feedback